# 2025-FDU-OOP-final-PJ

./: .gitignore  CMakeLists.txt  README-zh.md  README.md
src/: main.cpp
src/core/: Game.cpp  Game.h
src/entities/: Entity.h  Player.cpp  Player.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/render/: ResourceManager.cpp  ResourceManager.h
src/scene/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h
src/ui/: UIManager.cpp  UIManager.h
